<resources>
    <string name="appName">Walkbook</string>

    <!-- toolbar -->
    <string name="menuSearch">검색</string>
    <string name="menuAccount">내 정보</string>
    <string name="menuLogout">로그아웃</string>

    <!-- bottom navigation bar -->
    <string name="menuMap">지도로 보기</string>
    <string name="menuPost">게시물로 보기</string>
    <string name="menuCreate">산책로 등록</string>
    <string name="menuProfile">나의 워크북</string>

    <!-- authentication -->
    <string name="loginInputID">아이디를 입력하세요</string>
    <string name="loginInputPassword">비밀번호를 입력하세요</string>
    <string name="loginButton">로그인</string>
    <string name="loginJoinButton"><u>회원가입하러 가기</u></string>

    <string name="joinInputID">아이디를 입력하세요</string>
    <string name="joinInputPassword">비밀번호를 입력하세요</string>
    <string name="joinInputCheckPassword">비밀번호를 다시 입력하세요</string>
    <string name="joinInputNickname">닉네임을 입력하세요</string>
    <string name="joinInputAge">나이를 입력하세요</string>
    <string name="joinInputAddress">주소를 입력하세요</string>
    <string name="joinButton">회원가입</string>
    <string name="joinLoginButton"><u>이미 아이디가 있어요!</u></string>

    <!-- Create Edit post -->
    <string name="createTitle">새 산책로 만들기</string>
    <string name="editTitle">산책로 수정하기</string>

    <string name="createLabelTitle">산책로 이름</string>
    <string name="createLabelAuthor">작성자</string>
    <string name="createLabelDescription">산책로 소개</string>
    <string name="createLabelStart">출발위치</string>
    <string name="createLabelEnd">도착위치</string>
    <string name="createLabelTMI">산책로 TMI</string>

    <string name="createInputTitle">산책로의 이름을 입력해주세요</string>
    <string name="createInputDescription">산책로를 한 줄로 소개해주세요</string>
    <string name="createInputStart">산책로의 출발위치를 적어주세요</string>
    <string name="createInputEnd">산책로의 도착위치를 적어주세요</string>
    <string name="createInputTMI">산책로에 대해 하고 싶은 말을 자유롭게 적어주세요</string>

    <string name="createButton">만들기</string>
    <string name="editButton">수정하기</string>
    <string name="deleteButton">삭제하기</string>

    <!-- Post Detail -->
    <string name="commentInput">댓글을 입력해주세요</string>
    <string name="commentButton">작성</string>

    <!-- Profile -->
    <string name="profileEditTitle">내 정보 수정하기</string>

    <string name="profileLabelNickname">닉네임</string>
    <string name="profileLabelAddress">활동하는 장소</string>
    <string name="profileLabelIntroduction">소개</string>

    <string name="nicknameEditText">닉네임을 입력해주세요</string>
    <string name="locationEditText">활동하는 장소를 입력해주세요</string>
    <string name="introductionEditText">소개를 입력해주세요</string>

    <string name="profileEditButton">정보 수정하기</string>

    <string name="myPostButton">작성한 산책로</string>
    <string name="likedPostButton">좋아요한 산책로</string>


</resources>