<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileEditTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profileLabelNickname"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        android:hint="@string/nicknameEditText"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profileLabelAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        android:hint="@string/locationEditText"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profileLabelIntroduction"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/introductionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        android:hint="@string/introductionEditText"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textColor" />

    <Button
        android:id="@+id/profileEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/profileEditButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>