<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/createTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/lightGray"
            android:ems="10"
            android:hint="@string/createInputTitle"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelDescription"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputDescription"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/startEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputStart"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/endEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputEnd"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelTMI"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/tmiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputTMI"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/createButton"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>