<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/lightGray"
            android:ems="10"
            android:hint="@string/createInputTitle"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputDescription"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <EditText
            android:id="@+id/startEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputStart"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <EditText
            android:id="@+id/endEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputEnd"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <EditText
            android:id="@+id/tmiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:padding="15dp"
            android:hint="@string/createInputTMI"
            android:background="@color/lightGray"
            android:textColor="@color/black"
            android:textColorHint="@color/textColor" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/createButton"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>