<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <EditText
        android:id="@+id/login_id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="50dp"
        android:background="@color/lightGray"
        android:ems="10"
        android:hint="@string/loginInputID"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/textColor" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:ems="10"
        android:padding="15dp"
        android:hint="@string/loginInputPassword"
        android:inputType="textPassword"
        android:background="@color/lightGray"
        android:textColor="@color/black"
        android:textColorHint="@color/textColor" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/loginButton"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/loginJoinButton"
        android:textColor="@color/colorPrimaryDark"
        android:padding="0dp"/>

</LinearLayout>