<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="50dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileLabelNickname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/nicknameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profileLabelAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profileLabelIntroduction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/introductionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profileEditButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:background="@color/lightGray">
            <Button
                android:id="@+id/myPostsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="@string/myPostButton" />
            <Button
                android:id="@+id/likedPostsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                android:text="@string/likedPostButton" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightGray"/>
    </LinearLayout>

</ScrollView>