<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelAuthor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <Button
            android:id="@+id/authorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="0dp"
            android:textColor="@color/black"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelDescription"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/startText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/endText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createLabelTMI"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tmiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/editButton"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:background="@color/colorAccent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/deleteButton"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>